// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should render with children 1`] = `
.c0 {
  background-color: #fff;
  border-radius: 16px;
  box-shadow: 0px 0px 15px rgba(0,0,0,0.25);
}

<div>
  <div
    class="c0"
  >
    <p>
      Content
    </p>
  </div>
</div>
`;

exports[`Wrapper should render with other prop 1`] = `
.c0 {
  background-color: #fff;
  border-radius: 16px;
  box-shadow: 0px 0px 15px rgba(0,0,0,0.25);
}

<div>
  <div
    class="c0"
    data-testid="wrapper"
    id="test-id"
  >
    Text
  </div>
</div>
`;
